--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -207,47 +207,50 @@
       >
         <div class="grid grid-cols-3 gap-4 mb-4">
           <div
-            class="flex items-center justify-center h-24 rounded bg-gray-50 dark:bg-gray-800"
+            class="flex flex-start justify-start flex-col p-[10px] h-24 rounded bg-gray-50 dark:bg-gray-800"
           >
-            <p class="text-2xl text-gray-400 dark:text-gray-500">
-              <svg
-                class="w-3.5 h-3.5"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 18 18"
-              >
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M9 1v16M1 9h16"
-                />
-              </svg>
-            </p>
+            <div class="w-[100%] flex items-center justify-between">
+               <p class="">Total de empleados</p>
+               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
+                </svg>
+          
+              </div>
+              <p class="font-bold">70</p>
+               
+                 <p class="hidden min-[1000px]:block"> Este mes</p>   
+
+
+
+
+
+
+
+
           </div>
           <div
-            class="flex items-center justify-center h-24 rounded bg-gray-50 dark:bg-gray-800"
-          >
-            <p class="text-2xl text-gray-400 dark:text-gray-500">
-              <svg
-                class="w-3.5 h-3.5"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 18 18"
-              >
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M9 1v16M1 9h16"
-                />
+          class="flex flex-start justify-start flex-col p-[10px] h-24 rounded bg-gray-50 dark:bg-gray-800 "
+        >
+          <div class="w-[100%] flex items-center justify-between ">
+             <p class="">Total de empleados</p>
+             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
               </svg>
-            </p>
-          </div>
+
+            
+            </div>
+            
+
+            <p class="font-bold">70</p>
+               
+            <p class="hidden min-[1000px]:block"> Este mes</p>   
+
+
+
+
+
+
+        </div>
           <div
             class="flex items-center justify-center h-24 rounded bg-gray-50 dark:bg-gray-800"
           >
