--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -490,7 +490,7 @@
       </div>
     </section>
 
-    <script src="../assets/js/flowbite.js" id="scripts"></script>
+    <script type="module" src="../assets/js/flowbite.js" id="scripts"></script>
 
 
     
