--- a/src/templates/permisos-vacaciones.html
+++ b/src/templates/permisos-vacaciones.html
@@ -409,6 +409,6 @@
 
 <script src="../assets/js/tables.js"></script>
 <script src="../assets/js/empleados.js"></script>
-  <script src="../assets/js/flowbite.js"></script>
+<script type="module" src="../assets/js/flowbite.js" id="scripts"></script>
 </body>
 </html>
