--- a/src/templates/Asistencias.html
+++ b/src/templates/Asistencias.html
@@ -471,6 +471,6 @@
 
     <script src="../assets/js/tables.js"></script>
     <script src="../assets/js/empleados.js" id="scripts"></script>
-    <script src="../assets/js/flowbite.js" id="scripts"></script>
+    <script type="module" src="../assets/js/flowbite.js" id="scripts"></script>
 </body>
 </html>
