añadi los modales al login

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1526,16 +1526,16 @@ input:checked + .toggle-bg {
   margin-top: 0.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mt-8 {
   margin-top: 2rem;
 }
 
 .mt-\[15px\] {
   margin-top: 15px;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .block {
@@ -2040,11 +2040,6 @@ input:checked + .toggle-bg {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 131 248 / var(--tw-bg-opacity));
-}
-
 .bg-blue-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(26 86 219 / var(--tw-bg-opacity));
@@ -2129,10 +2124,6 @@ input:checked + .toggle-bg {
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
 }
 
 .p-\[10px\] {
@@ -2295,6 +2286,11 @@ input:checked + .toggle-bg {
   color: rgb(136 136 136 / var(--tw-text-opacity));
 }
 
+.text-\[\#8fc8ff\] {
+  --tw-text-opacity: 1;
+  color: rgb(143 200 255 / var(--tw-text-opacity));
+}
+
 .text-\[\#b9dfff\] {
   --tw-text-opacity: 1;
   color: rgb(185 223 255 / var(--tw-text-opacity));
@@ -2378,6 +2374,11 @@ input:checked + .toggle-bg {
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgb(227 160 8 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .placeholder-gray-500::-moz-placeholder {
@@ -2491,13 +2492,6 @@ th {
   background: rgb(11 23 57);
   color: white;
 }
-
-/* body {
-    background-image: url(../assets/Img/WhatsApp\ Image\ 2024-08-22\ at\ 1.28.58\ PM.jpeg);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-} */
 
 @media (max-width: 400px) {
   #unifica {
