--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
               ></path>
             </svg>
           </button>
-          <a href="https://flowbite.com" class="flex ms-2 md:me-24">
+          <a href=" " class="flex ms-2 md:me-24">
             <img
               src="../assets/Img/file.png"
               class="h-[50px] me-3"
@@ -167,7 +167,7 @@
               d="M8.961 16a.93.93 0 0 0 .189-.019l3.4-.679a.961.961 0 0 0 .49-.263l6.118-6.117a2.884 2.884 0 0 0-4.079-4.078l-6.117 6.117a.96.96 0 0 0-.263.491l-.679 3.4A.961.961 0 0 0 8.961 16Zm7.477-9.8a.958.958 0 0 1 .68-.281.961.961 0 0 1 .682 1.644l-.315.315-1.36-1.36.313-.318Zm-5.911 5.911 4.236-4.236 1.359 1.359-4.236 4.237-1.7.339.341-1.699Z"
             />
           </svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Sign Up</span>
+          <span class="flex-1 ms-3 whitespace-nowrap">Manual de usuario</span>
         </a>
       </li>
 
@@ -175,7 +175,7 @@
 
       <li>
         <a
-          href="#"
+          href="../Backend/logout.php"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
         >
           <svg
@@ -193,7 +193,7 @@
               d="M1 8h11m0 0L8 4m4 4-4 4m4-11h3a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-3"
             />
           </svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Sign In</span>
+          <span class="flex-1 ms-3 whitespace-nowrap">Cerrar Sección</span>
         </a>
       </li>
       
@@ -207,7 +207,7 @@
       >
         <div class="grid grid-cols-3 gap-4 mb-4">
           <div
-            class="flex flex-start justify-start flex-col p-[10px] h-24 rounded bg-gray-50 dark:bg-gray-800"
+            class="flex flex-start justify-start flex-col p-[10px] h-24 rounded bg-[#0b1739] text-[#8fc8ff] font-medium"
           >
             <div class="w-[100%] flex items-center justify-between">
                <p class="">Total de empleados</p>
@@ -229,7 +229,7 @@
 
           </div>
           <div
-          class="flex flex-start justify-start flex-col p-[10px] h-24 rounded bg-gray-50 dark:bg-gray-800 "
+          class="flex flex-start justify-start flex-col p-[10px] h-24 rounded bg-[#0b1739] text-[#8fc8ff] font-medium "
         >
           <div class="w-[100%] flex items-center justify-between ">
              <p class="">Total de empleados</p>
