--- a/src/templates/lista-empleados.html
+++ b/src/templates/lista-empleados.html
@@ -26,7 +26,7 @@
               </path>
             </svg>
           </button>
-          <a href="https://flowbite.com" class="flex ms-2 md:me-24">
+          <a href=" " class="flex ms-2 md:me-24">
             <img src="../assets/Img/file.png" class="h-[50px] me-3" alt="Biblioteca Virtual" />
             <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap text-white">Biblioteca
               Virtual</span>
@@ -108,7 +108,7 @@
         </li>
 
         <li>
-          <a href="#"
+          <a href="../Backend/logout.php"
             class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group">
             <svg
               class="flex-shrink-0 w-5 h-5 text-[rgb(0,170,255)] transition duration-75 group-hover:text-white dark:group-hover:text-white"
@@ -119,7 +119,7 @@
               <path
                 d="M8.961 16a.93.93 0 0 0 .189-.019l3.4-.679a.961.961 0 0 0 .49-.263l6.118-6.117a2.884 2.884 0 0 0-4.079-4.078l-6.117 6.117a.96.96 0 0 0-.263.491l-.679 3.4A.961.961 0 0 0 8.961 16Zm7.477-9.8a.958.958 0 0 1 .68-.281.961.961 0 0 1 .682 1.644l-.315.315-1.36-1.36.313-.318Zm-5.911 5.911 4.236-4.236 1.359 1.359-4.236 4.237-1.7.339.341-1.699Z" />
             </svg>
-            <span class="flex-1 ms-3 whitespace-nowrap">Sign Up</span>
+            <span class="flex-1 ms-3 whitespace-nowrap">Manual de usuario</span>
           </a>
         </li>
 
@@ -134,7 +134,7 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M1 8h11m0 0L8 4m4 4-4 4m4-11h3a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-3" />
             </svg>
-            <span class="flex-1 ms-3 whitespace-nowrap">Sign In</span>
+            <span class="flex-1 ms-3 whitespace-nowrap">Cerrar Sección</span>
           </a>
         </li>
 
