--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/output.css" />
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Iniciar Sección</title>
   </head>
-  <body class="bg-[#060d23] ">
+  <body class=" ">
  
     <form
       class="w-[90%] max-w-[400px] absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] rounded-[20px] bg-[#0b1739] " action="../Backend/login.php" id="loginForm"
@@ -64,13 +65,20 @@
 
 <!-- Modal -->
 <div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center">
-  <div class="bg-white rounded-lg p-5 w-80">
+  <div class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-4 w-96">    
+    <div class="w-12 h-12 flex items-center justify-center bg-red-500 rounded-full">
+      <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+    </svg>
+  </div>
+  <div class="flex-1">
     <h2 id="modalTitle" class="font-bold text-lg"></h2>
     <p id="modalMessage" class="mt-2"></p>
-    <button id="modalClose" class="mt-4 bg-blue-500 text-white rounded-lg px-4 py-2">Cerrar</button>
+    
   </div>
+  <button  id="t" onclick="cerrarModal('modalError')" class="text-gray-500 mb-10 font-medium text-black">X</button>
 </div>
-
+</div>
     <script src="../assets/js/login.js"></script>
   </body>
 </html>
