--- a/src/templates/Asistencias.html
+++ b/src/templates/Asistencias.html
@@ -113,10 +113,10 @@
             <a href="Asistencias.html" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
             hover:text-white dark:text-white dark:hover:bg-gray-700">Asistencias</a>
          </li>
-          <li>
-             <a href="lista-empleados.html" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
-             hover:text-white dark:text-white dark:hover:bg-gray-700">Lista de Empleados</a>
-          </li>
+         <li>
+          <a href="lista-empleados.php" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
+          hover:text-white dark:text-white dark:hover:bg-gray-700">Lista de Empleados</a>
+       </li>
           <li>
             <a href="permisos-vacaciones.html" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
             hover:text-white dark:text-white dark:hover:bg-gray-700">Permisos Y Vacaciones</a>
