--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../css/output.css" rel="stylesheet" />
+   
     <title>Document</title>
   </head>
   <body class="bg-[#060d23]">
@@ -203,7 +204,7 @@
 
     <section class="p-4 sm:ml-64" id="section">
       <div
-        class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 mt-14"
+        class="p-4  mt-14"
       >
         <div class="grid grid-cols-3 gap-4 mb-4">
           <div
