--- a/src/templates/Admin/Asistencias.html
+++ b/src/templates/Admin/Asistencias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../css/output.css" rel="stylesheet" />
+    <link href="../../css/output.css" rel="stylesheet" />
     
 </head>
 <body class="bg-[#060d23]">
@@ -39,7 +39,7 @@
         </button>
         <a href=" " class="flex ms-2 md:me-24">
           <img
-            src="../assets/Img/file.png"
+            src="../../assets/Img/file.png"
             class="h-[50px] me-3"
             alt="Biblioteca Virtual"
           />
@@ -469,8 +469,8 @@
 
 
 
-    <script src="../assets/js/tables.js"></script>
-    <script src="../assets/js/empleados.js" id="scripts"></script>
-    <script type="module" src="../assets/js/flowbite.js" id="scripts"></script>
+    <script src="../../assets/js/tables.js"></script>
+    <script src="../../assets/js/empleados.js" id="scripts"></script>
+    <script type="module" src="../../assets/js/flowbite.js" id="scripts"></script>
 </body>
 </html>
