--- a/src/templates/Admin/tablero-admin.html
+++ b/src/templates/Admin/tablero-admin.html
@@ -223,7 +223,7 @@
             </p>
           </div>
           <div
-            class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800" id="chart-container"
+            class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 p-[10px]" id="chart-container"
           >
             <p class="text-2xl text-gray-400 dark:text-gray-500">
               
