--- a/src/templates/Admin/tablero-admin.html
+++ b/src/templates/Admin/tablero-admin.html
@@ -86,7 +86,7 @@
         </a>
         <ul id="dropdown-example" class="hidden py-2 space-y-2">
           <li>
-            <a href="Asistencias.html" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
+            <a href="asistencias.php" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
             hover:text-white dark:text-white dark:hover:bg-gray-700">Asistencias</a>
          </li>
           <li>
@@ -94,7 +94,7 @@
              hover:text-white dark:text-white dark:hover:bg-gray-700">Lista de Empleados</a>
           </li>
           <li>
-            <a href="permisos-vacaciones.html" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
+            <a href="permisos-vacaciones.php" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
             hover:text-white dark:text-white dark:hover:bg-gray-700">Permisos Y Vacaciones</a>
          </li>
           
@@ -154,9 +154,9 @@
                 </svg>
           
               </div>
-              <p class="font-bold">70</p>
+              <p class="font-bold" id="empleados">cargando..</p>
                
-                 <p class="hidden min-[1000px]:block"> Este mes</p>   
+               
 
 
 
@@ -216,19 +216,20 @@
      
         <div class="grid grid-cols-2 gap-4 mb-4">
           <div
+          class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 p-[10px]" id="chart-container"
+        >
+          <p class="text-2xl text-gray-400 dark:text-gray-500">
+            
+          </p>
+        </div>
+          <div
             class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 " id="'main"
           >
             <p class="text-2xl text-gray-400 dark:text-gray-500">
               
             </p>
           </div>
-          <div
-            class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 p-[10px]" id="chart-container"
-          >
-            <p class="text-2xl text-gray-400 dark:text-gray-500">
-              
-            </p>
-          </div>
+        
           
         
         </div>
