--- a/src/templates/Empleado/tablero-empleados.html
+++ b/src/templates/Empleado/tablero-empleados.html
@@ -74,7 +74,7 @@
       </li>
       <li>
         <a
-          href="#"
+          href="mis-asistencias.php"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group" 
           
         >
@@ -105,7 +105,7 @@
         </a>
         <ul id="dropdown-example" class="hidden py-2 space-y-2">
           <li>
-            <a href="Asistencias.html" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
+            <a href="asistencias.php" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
             hover:text-white dark:text-white dark:hover:bg-gray-700">Mis Solicitudes</a>
          </li>
     
