añadi opciones al menu y arregle la tabla de asistencias

--- a/src/templates/Admin/estadisticas.html
+++ b/src/templates/Admin/estadisticas.html
@@ -168,7 +168,7 @@
 
 
     </section>
-    <script src="https://fastly.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
+    <script src="../../assets/js/graficas.js"></script>
     <script src="../../assets/js/estadisticas.js"></script>
     <script type="module" src="../../assets/js/flowbite.js" id="scripts"></script>
  
