--- a/src/templates/Admin/tablero-admin.html
+++ b/src/templates/Admin/tablero-admin.html
@@ -115,6 +115,38 @@
 
       <li>
         <a
+          href=""
+          class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
+        >
+        <i class="ti ti-report-search" style="font-size: 25px;"></i>
+          <span class="flex-1 ms-3 whitespace-nowrap">Reportes</span>
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
+        >
+      
+        <i class="ti ti-users-group" style="font-size: 25px;"></i>
+          <span class="flex-1 ms-3 whitespace-nowrap">Bitacora de usuarios</span>
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
+        >
+          <i class="ti ti-database" style="font-size: 25px;"></i>
+          <span class="flex-1 ms-3 whitespace-nowrap">Base De Datos</span>
+        </a>
+      </li>
+
+
+      <li>
+        <a
           href="#"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
         >
@@ -237,7 +269,7 @@
 
 
     </section>
-    <script src="https://fastly.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
+    <script src="../../assets/js/graficas.js"></script>
     <script src="../../assets/js/index.js"></script>
     <script type="module" src="../../assets/js/flowbite.js" id="scripts"></script>
  
