--- a/src/templates/Empleado/mis-asistencias.html
+++ b/src/templates/Empleado/mis-asistencias.html
@@ -64,7 +64,7 @@ aria-label="Sidebar"
   <ul class="space-y-2 font-medium">
     <li>
       <a
-        href="index.html"
+        href="tablero-empleados.html"
         class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
       >
         <i class="ti ti-users" style="font-size: 25px;"></i>
@@ -74,7 +74,7 @@ aria-label="Sidebar"
     </li>
     <li>
       <a
-        href="mis-asistencias.php"
+        href="mis-asistencias.html"
         class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group" 
         
       >
@@ -105,7 +105,7 @@ aria-label="Sidebar"
       </a>
       <ul id="dropdown-example" class="hidden py-2 space-y-2">
         <li>
-          <a href="asistencias.php" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
+          <a href="solicitudes-permisos.php" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
           hover:text-white dark:text-white dark:hover:bg-gray-700">Mis Solicitudes</a>
        </li>
   
@@ -347,7 +347,7 @@ aria-label="Sidebar"
             <th>Hora de entrada</th>
             <th>Hora de salida</th>
             <th>Estado</th>
-          
+           
            
         </tr>
     </thead>
