--- a/src/templates/Empleado/tablero-empleados.html
+++ b/src/templates/Empleado/tablero-empleados.html
@@ -64,7 +64,7 @@
     <ul class="space-y-2 font-medium">
       <li>
         <a
-          href="index.html"
+          href="tablero-empleados.html"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
         >
           <i class="ti ti-users" style="font-size: 25px;"></i>
@@ -74,7 +74,7 @@
       </li>
       <li>
         <a
-          href="mis-asistencias.php"
+          href="mis-asistencias.html"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group" 
           
         >
@@ -105,7 +105,7 @@
         </a>
         <ul id="dropdown-example" class="hidden py-2 space-y-2">
           <li>
-            <a href="asistencias.php" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
+            <a href="solicitudes-permisos.php" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
             hover:text-white dark:text-white dark:hover:bg-gray-700">Mis Solicitudes</a>
          </li>
     
@@ -144,7 +144,7 @@
 
 
     </section>
-    <script src="https://fastly.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
+    <script src="../../assets/js/graficas.js"></script>
    
     <script type="module" src="../../assets/js/flowbite.js" id="scripts"></script>
  
