agregue la busqueda dinamica al formulario de añadir asistencias

--- a/src/templates/Admin/tablero-admin.html
+++ b/src/templates/Admin/tablero-admin.html
@@ -211,9 +211,9 @@
             </div>
             
 
-            <p class="font-bold">95%</p>
+            <p class="font-bold" id="asistencias">cargando..</p>
                
-            <p class="hidden min-[1000px]:block"> Promedio Mensual</p>   
+            <p class="hidden min-[1000px]:block"> Promedio Semanal</p>   
 
 
 
