--- a/src/templates/Empleado/mis-asistencias.html
+++ b/src/templates/Empleado/mis-asistencias.html
@@ -213,8 +213,8 @@ aria-label="Sidebar"
                 
                     <div>
                       <label for="nombre" class="block mb-2 text-sm font-medium text-white">Nombre Completo</label>
-                      <input type="text" name="nombre" id="nombre" class="bg-[#060d23] border text-gray-400 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" placeholder="Ingresar Nombre Completo" >
-                    </div>
+                      <input type="text" name="nombre" id="nombre_completo" class="bg-[#060d23] border text-gray-400 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" placeholder="Ingresar Nombre Completo">
+                  </div>
                     <div class="">
                       <label class="block text-sm font-medium text-white mb-2">Seleccionar Fecha</label>
     
@@ -227,12 +227,12 @@ aria-label="Sidebar"
                                 d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
                             </svg>
                           </div>
-                          <input datepicker id="fecha" name="fecha" type="text"
-                          class="bg-[#060d23] border text-gray-400 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                          <input datepicker id="default-datepicker" name="fecha" type="text"
+                          class="bg-[#060d23] border  text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                           placeholder="Fecha">
                         </div>
     
-    
+                     
                       </div>
     
                     </div>
@@ -370,7 +370,7 @@ aria-label="Sidebar"
 
     <script src="../../assets/js/tables.js"></script>
     <script src="../../assets/js/empleados.js" id="scripts"></script>
-    
+    <script src="../../assets/js/buscador.js"></script>
     <script type="module" src="../../assets/js/flowbite.js" id="scripts"></script>
 </body>
 </html>
