--- a/src/templates/Admin/bases-datos.html
+++ b/src/templates/Admin/bases-datos.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../css/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="../../assets/webfont/tabler-icons-outline.css">
     <title>Document</title>
-  </head>
-  <body class="bg-[#060d23]">
-    <nav
+</head>
+<body class="bg-[#060d23]">
+<nav
     class="fixed top-0 z-50 w-full bg-[#0b1739] dark:bg-gray-800 dark:border-gray-700" id="barra-de-navegacion"
   >
     <div class="px-3 py-3 lg:px-5 lg:pl-3">
@@ -171,109 +171,7 @@
   </div>
 </aside>
 
-    <section class="p-4 sm:ml-64" id="section">
-      <div
-        class="p-4  mt-14"
-      >
-        <div class="grid grid-cols-3 gap-4 mb-4">
-          <div
-            class="flex flex-start justify-start flex-col p-[10px] h-24 rounded bg-[#0b1739] text-[#8fc8ff] font-medium"
-          >
-            <div class="w-[100%] flex items-center justify-between">
-               <p class="">Total de empleados</p>
-               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-                </svg>
-          
-              </div>
-              <p class="font-bold" id="empleados">cargando..</p>
-               
-               
 
-
-
-
-
-
-
-
-          </div>
-          <div
-          class="flex flex-start justify-start flex-col p-[10px] h-24 rounded bg-[#0b1739] text-[#8fc8ff] font-medium "
-        >
-          <div class="w-[100%] flex items-center justify-between ">
-             <p class="">Tasa de Asistencias</p>
-             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-              </svg>
-
-            
-            </div>
-            
-
-            <p class="font-bold" id="asistencias">cargando..</p>
-               
-            <p class="hidden min-[1000px]:block"> Promedio Semanal</p>   
-
-
-
-
-
-
-        </div>
-        <div
-        class="flex flex-start justify-start flex-col p-[10px] h-24 rounded bg-[#0b1739] text-[#8fc8ff] font-medium "
-      >
-        <div class="w-[100%] flex items-center justify-between ">
-           <p class="">Solicitudes de Vacaciones</p>
-           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-            </svg>
-
-          
-          </div>
-          
-
-          <p class="font-bold">8</p>
-             
-          <p class="hidden min-[1000px]:block"> Pendientes de aprobación</p>   
-
-
-
-
-
-
-      </div>
-        </div>
-     
-        <div class="grid grid-cols-2 gap-4 mb-4">
-          <div
-          class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 p-[10px]" id="chart-container"
-        >
-          <p class="text-2xl text-gray-400 dark:text-gray-500">
-            
-          </p>
-        </div>
-          <div
-            class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 " id="'main"
-          >
-            <p class="text-2xl text-gray-400 dark:text-gray-500">
-              
-            </p>
-          </div>
-        
-          
-        
-        </div>
-        </div>
-
-
-    </section>
-    <script src="../../assets/js/graficas.js"></script>
-    <script src="../../assets/js/index.js"></script>
-    <script type="module" src="../../assets/js/flowbite.js" id="scripts"></script>
- 
-
-  
-  </body>
+<script type="module" src="../../assets/js/flowbite.js" id="scripts"></script>
+</body>
 </html>
