--- a/src/templates/Admin/estadisticas.html
+++ b/src/templates/Admin/estadisticas.html
@@ -115,7 +115,7 @@
 
       <li>
         <a
-          href=""
+          href="reportes.html"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
         >
         <i class="ti ti-report-search" style="font-size: 25px;"></i>
@@ -125,7 +125,7 @@
 
       <li>
         <a
-          href=""
+          href="bitacora-usuarios.php"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
         >
       
@@ -136,7 +136,7 @@
 
       <li>
         <a
-          href=""
+          href="bases-datos.html"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
         >
           <i class="ti ti-database" style="font-size: 25px;"></i>
@@ -147,7 +147,7 @@
 
       <li>
         <a
-          href="#"
+          href="manual-usuario.html"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
         >
         <i class="ti ti-help-octagon" style="font-size: 25px;"></i>
