--- a/src/templates/registro.html
+++ b/src/templates/registro.html
@@ -129,7 +129,7 @@
           Registrarse
         </button>
 
-        <span class="text-[#888]">¿Tienes una cuenta? <a href="login.html" class="font-[500] text-white hover:text-[#60a5fa]">Inicia Sección</a> </span>
+        <span class="text-[#888]">¿Tienes una cuenta? <a href="login.php" class="font-[500] text-white hover:text-[#60a5fa]">Inicia Sección</a> </span>
       </fieldset>
 
    
